--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operations-sorter=method-alpha
 #springdoc.api-docs.path=/api-docs
 #springdoc.swagger-ui.path=/anabul-docs.html
-
-server.port=8081
+#
+#server.port=8081
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
